fix(scripts): use https.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="lib/codemirror/mode/javascript/javascript.js"></script>
     <script type="text/javascript" src="lib/fancytree/fancytree.min.js"></script>
 
-    <script type="text/javascript" src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <script type="text/javascript" src="https://code.responsivevoice.org/responsivevoice.js"></script>
 </head>
 
 <body>
